fix scroll and colors -fixed scroll on desktop -some classes with colors to dark mode only

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,13 @@
     padding: 0;
 }
 
-#root {
+body {
     height: 100vh;
+    /* text-align: center; */
+}
+
+#root {
+    height: 100%;
     /* text-align: center; */
 }
 
